assets/kubernetes/aws/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app-name go-onboarding
  namespace: test-a
  labels:
    app: *app-name
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: *app-name
  template:
    metadata:
      labels:
        app: *app-name
    spec:
      serviceAccountName: sa-go-onboarding
      volumes:
      - name: volume-secret
        secret:
          secretName: es-rds-arch-secret-go-onboarding
      securityContext:
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 3000
      containers:
      - name: *app-name
        image: 992382474575.dkr.ecr.us-east-2.amazonaws.com/go-onboarding:latest
        volumeMounts:
          - mountPath: "/var/pod/secret"
            name: volume-secret
            readOnly: true
        resources:
           requests:
             cpu: 100m
             memory: 100Mi
           limits:
             cpu: 400m
             memory: 200Mi
        securityContext:
          seccompProfile:
            type: RuntimeDefault
          runAsNonRoot: true
          runAsUser: 1100
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
        - name: http
          containerPort: 6004
          protocol: TCP
        readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 30
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 10
        livenessProbe:
            exec:
              command:
              - /bin/sh
              - -c
              - "ps -A | grep go-onboarding | grep -v grep"
            initialDelaySeconds: 5
            periodSeconds: 30
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 5
      terminationGracePeriodSeconds: 60
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                topologyKey: topology.kubernetes.io/zone
                labelSelector:
                  matchLabels:
                    app: *app-name
              weight: 100
